--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 			Andrzejak Alexandre
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+Le véganisme (francisation de l'anglais veganism), dit également végétalisme intégral (expression utilisée au Québec1 et parfois en France), est un mode de vie consistant à ne consommer aucun produit issu des animaux ou de leur exploitation. L'adoption de ce mode de vie découle généralement d'une idéologie qui propose une redéfinition normative de ce que devraient être les relations des humains aux animaux. Cette idéologie peut prendre la forme de l'antispécisme, un mouvement selon lequel la même considération morale devrait être accordée aux différentes espèces animales. Plus généralement, le véganisme peut s'inscrire dans une action pour la défense des droits des animaux.
+ animales).
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="https://fr.wikipedia.org/wiki/Véganisme">Veganisme</a>
 		</h3>
 	</div>
 
