--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 			Wyrwinski Léo
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			YouTube est un site web d’hébergement de vidéos et un média social sur lequel les utilisateurs peuvent envoyer, évaluer, regarder, commenter et partager des vidéos. Il a été créé en février 2005 par Steve Chen, Chad Hurley et Jawed Karim, trois anciens employés de PayPal et racheté par Google en octobre 2006 pour la somme de 1,65 milliard de dollars. Le service est situé à San Bruno, en Californie.
+
+En 2009, environ 350 millions de personnes visitent chaque mois ce site de partage de vidéos. Le 28 octobre 2010, l'ensemble des chaînes de YouTube atteint le milliard d'abonnés. La chaîne Youtube comptant le plus d'abonnés est celle de PewDiePie (plus de 60 millions en janvier 2018) et la vidéo la plus vue est Despacito de Luis Fonsi et Daddy Yankee (plus de 5 milliards de vues en mai 2018)
 		</p>
 		<h3>Source : <a href="#">blabla</a>
 		</h3>
